# jackett-indexarr

./: PKG-INFO  README.md  pyproject.toml  setup-arr-indexers.py  setup.py
.github/workflows/: main.yml
jackett_indexarr/: cli.py  utils.py
jackett_indexerarr/: cli.py  utils.py
