[tool.poetry]
name = "jackett-indexerarr"
version = "0.16"
description = ""
readme = "README.md"
repository = "https://github.com/dmzoneill/jackett-indexerarr"
authors = ["David O Neill <dmz.oneill@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
typer = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"

[tool.poetry.scripts]
jackett-indexerarr = "jackett_indexerarr.cli:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


