[tool.poetry]
name = "jackett-indexarr"
version = "0.16.1"
description = ""
readme = "README.md"
repository = "https://github.com/dmzoneill/jackett-indexarr"
authors = ["David O Neill <dmz.oneill@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
typer = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"

[tool.poetry.scripts]
jackett-indexarr = "jackett_indexarr.cli:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


